# interlockrecord

./: .gitignore  .project  LICENSE  README.md  build.xml  jenkins.sh
proto/src-proto/programs/i32obfs-test/: CMakeLists.txt  I32Obfuscator.cpp  I32Obfuscator.h
proto/src-proto/programs/rwlock-test/: CMakeLists.txt  IRSemaphore.cpp  main.cpp
src/: .gitignore  CMakeLists.txt  DEPS.md  README.md  gen-linux-build.sh  gen-win-build.bat
src-buildtest/dummylib-test/: CMakeLists.txt
src-buildtest/dummylib-test/src/: dummylibtest.cpp
src-proto/libs/dlltest/: CLibrary.cpp  CLibrary.h  CMakeLists.txt  IRLibrary.cpp  IRLibrary.h  dlltest.cpp  dlltest.def  dlltest.h  dlltest_def.h  dlltest_t.h  dlltestloader.cpp  main.cpp  main.h
src-proto/programs/botan-test/: .gitignore  Botan2.cmake  CMakeLists.txt  MSVCCRT.cmake  test.cpp
src-proto/programs/rwlock-test/: CMakeLists.txt  IRRWLock.cpp  IRRWLock.h  IRSemaphore.cpp  IRSemaphore.h  main.cpp
src-proto/prototypes/cmaketest/: CMakeLists.txt  README.md
src-proto/prototypes/cmaketest/cmake/: Botan2.cmake  MSVCCRT.cmake
src-proto/prototypes/cmaketest/dummy/: CMakeLists.txt
src-proto/prototypes/cmaketest/dummylib/: CMakeLists.txt
src-proto/prototypes/cmaketest/dummylib-test/: CMakeLists.txt
src/cmake/: Botan2.cmake  GTest.cmake  MSVCCRT.cmake  MSVCUtils.cmake  OpenSSLEx.cmake
src/ircommon/: .gitignore  CMakeLists.txt  Doxyfile.in  ls-src.sh
src/ircommon-test/: CMakeLists.txt
src/ircommon-test/src/: I32FeistelObfuscatorTest.cpp  I32FeistelObfuscatorTest.h  I32ObfuscatorTest.cpp  I32ObfuscatorTest.h  ILIntTest.cpp  ILIntTest.h  IRAlphabetTest.cpp  IRAlphabetTest.h  IRAutoMemoryCleanerTest.cpp  IRAutoMemoryCleanerTest.h  IRBase2NCodecTest.cpp  IRBase2NCodecTest.h  IRBase32AlphabetTest.cpp  IRBase64AlphabetTest.cpp  IRBaseSecureTempTest.cpp  IRBaseSecureTempTest.h  IRBinaryAlphabetTest.cpp  IRBinaryAlphabetTest.h  IRBufferTest.cpp  IRBufferTest.h  IRCodecTest.cpp  IRCodecTest.h  IRDummyRandom.cpp  IRDummyRandom.h  IRFloatingPointTest.cpp  IRFloatingPointTest.h  IRGenericAlphabetTest.cpp  IRHandleListTest.cpp  IRHandleListTest.h  IRHexAlphabetTest.cpp  IRHexAlphabetTest.h  IRIDGeneratorTest.cpp  IRIDGeneratorTest.h  IRJsonArrayTest.cpp  IRJsonArrayTest.h  IRJsonBooleanTest.cpp  IRJsonDecimalTest.cpp  IRJsonDecimalTest.h  IRJsonIntegerTest.cpp  IRJsonIntegerTest.h  (+28 more)
src/ircommon-test/src/codec/: IRAlphabetTest.cpp  IRAlphabetTest.h  IRBase2NCodecTest.cpp  IRBase2NCodecTest.h  IRBase32AlphabetTest.cpp  IRBase32AlphabetTest.h  IRBase64AlphabetTest.cpp  IRBase64AlphabetTest.h  IRBinaryAlphabetTest.cpp  IRBinaryAlphabetTest.h  IRGenericAlphabetTest.cpp  IRGenericAlphabetTest.h  IRHexAlphabetTest.cpp  IRHexAlphabetTest.h
src/ircommon-test/src/crypto/: I32FeistelObfuscatorTest.cpp  I32FeistelObfuscatorTest.h  I32ObfuscatorTest.cpp  I32ObfuscatorTest.h  IRARC4RandomTest.cpp  IRARC4RandomTest.h  IRARC4Test.cpp  IRARC4Test.h  IRProtectedMemoryTest.cpp  IRProtectedMemoryTest.h
src/ircommon-test/src/iltags/: ILBaseTagArrayTagTest.cpp  ILBaseTagArrayTagTest.h  ILBaseTagListTagTest.cpp  ILBaseTagListTagTest.h  ILBasicFixedOpaqueTagTest.cpp  ILBasicFixedOpaqueTagTest.h  (+72 more)
src/ircommon/src/: i32obfus.cpp  ilint.cpp  iltag.cpp  iltagstd.cpp  iralphab.cpp  irarc4.cpp  irbuffer.cpp  ircodec.cpp  irfp.cpp  irjson.cpp  irpmem.cpp  irrandom.cpp  irrwlock.cpp  irsemaph.cpp  irshrand.cpp  irutils.cpp
src/ircommonlib/: .gitignore  CMakeLists.txt  Doxyfile
src/ircommonlib-test/: CMakeLists.txt  ircommonlib-tests
src/ircommonlib-test/src/: IRBufferTest.cpp  IRUtilsTest.cpp
src/ircommonlib/src/: ilint.cpp  irbuffer.cpp  irutils.cpp
src/ircommonlib/test/: ILIntTest.cpp  ILIntTest.h
src/irecord/: .gitignore  CMakeLists.txt  Doxyfile.in
src/irecord-test/: CMakeLists.txt  ls-src.sh
src/irecord-test/src/: IRBlockDisposeTest.cpp  IRBlockDisposeTest.h  IRBlockLoadTest.cpp  IRBlockLoadTest.h  IRBlockParameterTest.cpp  IRBlockParameterTest.h  IRBlockSerializeTest.cpp  IRBlockSerializeTest.h  IRCheckEmergencyClosingTest.cpp  IRCheckEmergencyClosingTest.h  IRCheckParentTest.cpp  IRCheckParentTest.h  IRCheckRootTest.cpp  IRCheckRootTest.h  IRCloseTest.cpp  IRCloseTest.h  IRContextCreateTest.cpp  IRContextCreateTest.h  IRContextDisposeTest.cpp  IRContextDisposeTest.h  IRDataBlockAddTest.cpp  IRDataBlockAddTest.h  IRDeinitializeTest.cpp  IRDeinitializeTest.h  IREmergencyCloseTest.cpp  IREmergencyCloseTest.h  IREmergencyKeyCreateTest.cpp  IREmergencyKeyCreateTest.h  IREmergencyKeyDisposeTest.cpp  IREmergencyKeyDisposeTest.h  IREmergencyKeyLoadTest.cpp  IREmergencyKeyLoadTest.h  IREmergencyKeySerializeTest.cpp  IREmergencyKeySerializeTest.h  IREmergencyKeySerializedTest.cpp  IREmergencyKeySerializedTest.h  IRGetVersionTest.cpp  IRGetVersionTest.h  IRInitializeTest.cpp  IRInitializeTest.h  (+27 more)
src/irecord/src/: IRBlockDispose.cpp  IRBlockLoad.cpp  IRBlockParameter.cpp  IRBlockSerialize.cpp  IRCheckEmergencyClosing.cpp  IRCheckParent.cpp  IRCheckRoot.cpp  IRClose.cpp  IRContextCreate.cpp  IRContextDispose.cpp  IRDataBlockAdd.cpp  IRDeinitialize.cpp  IREmergencyClose.cpp  IREmergencyKeyCreate.cpp  IREmergencyKeyDispose.cpp  IREmergencyKeyLoad.cpp  IREmergencyKeySerialize.cpp  IREmergencyKeySerialized.cpp  IRGetVersion.cpp  IRInitialize.cpp  IRInstanceStateCreate.cpp  IRInstanceStateDispose.cpp  IRInstanceStateLoad.cpp  IRInstanceStateSerialize.cpp  IRInstanceStateSetParam.cpp  IRRootBlockCreate.cpp  IRRootTemplateCreate.cpp  IRRootTemplateDispose.cpp  IRRootTemplateParam.cpp  IRRootTemplateParamInt.cpp  IRRootTemplateSetEmergencyKey.cpp  IRRootTemplateSetNetwork.cpp  IRRootTemplateSetParent.cpp  irecord.def  version.h.in
src/irecordcore/: .gitignore  CMakeLists.txt  Doxyfile.in
src/irecordcore-test/: CMakeLists.txt  ls-src.sh
src/irecordcore-test/src/: IRTypedRawTest.cpp  IRTypedRawTest.h
src/irecordcore/src/: IRCHandle.cpp  irbciphm.cpp  irbciphr.cpp  irblock.cpp  ircipher.cpp  irciphpd.cpp  irhash.cpp  irkey.cpp  irkeygen.cpp  irmac.cpp  irpbkdf2.cpp  irsrand.cpp  irtags.cpp  irtypes.cpp
src/libs/ircommon/: .gitignore  CMakeLists.txt  README.md
(+296 files in other folders)
